# residual_stream_ranking

./: .gitignore  LICENSE  README.md  con-chat.sqlite3  pyproject.toml
.codex/environments/: environment.toml
.playwright-cli/: page-2026-04-19T12-31-49-187Z.yml  page-2026-04-19T12-34-29-030Z.yml  page-2026-04-19T12-36-03-788Z.yml  page-2026-04-19T13-02-01-046Z.yml  page-2026-04-19T13-10-43-676Z.yml  page-2026-04-19T13-36-57-938Z.yml  page-2026-04-19T14-17-30-835Z.yml  page-2026-04-19T14-40-21-637Z.yml  page-2026-04-19T14-50-05-649Z.yml  page-2026-04-19T14-51-58-346Z.yml  page-2026-04-19T14-52-07-634Z.yml  page-2026-04-20T07-04-30-825Z.yml  page-2026-04-20T07-07-01-067Z.yml  page-2026-04-20T08-27-23-971Z.yml  page-2026-04-20T08-37-40-545Z.yml  page-2026-04-20T09-04-37-143Z.yml  page-2026-04-20T09-23-50-364Z.yml  page-2026-04-20T09-30-15-831Z.yml  page-2026-04-20T09-32-46-819Z.yml
artifacts/memory_ledger/: bridge_apollo_replay.json
con-chat/: README.md  electron-builder.yml  package.json
con-chat/app/: main.js  preload.js
con-chat/app/renderer/: app.js  index.html  styles.css
con-chat/docs/: architecture.md  verification.md
con-chat/sidecar/: README.md  kv_codec.py  openapi.yaml  server.py  smoke_kv_codec.py
con-chat/sidecar/migrations/: 0001_initial.sql  (+1 more)
data/: apollo11_clean.txt
docs/: compact_frontier.md  findings.md  replay_protocol.md
src/residual_stream_lab/: __init__.py  apollo.py  checkpointing.py  cli.py  hf_trace.py  llm.py  memory_ledger.py  synthetic.py  temporal.py  trace.py
tests/: test_memory_ledger.py  test_trace.py
